<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:gravity="center"/>
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading1"
            android:textSize="20sp"
            android:gravity="center"/>

    <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading2"
            android:textSize="20sp"
            android:gravity="center"/>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout

            android:background="@drawable/layout_design"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:drawablePadding="8dp"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/per"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="text"
                android:layout_alignTop="@+id/email"
                android:layout_alignStart="@+id/email"/>
    </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
                android:background="@drawable/layout_design"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleTint="#4CAF50"
                app:passwordToggleDrawable="@drawable/visibility_selector"
                app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:layout_margin="8dp"

                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/lock"
                    android:inputType="textPassword"
                    android:layout_alignTop="@+id/pass"
                    android:layout_alignStart="@+id/pass"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

        <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
        />

        <TextView
                android:id="@+id/forgot_password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:text="@string/login_forgot_password"
        />

    </RelativeLayout>


    <Button

            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/login_button"
            android:background="@drawable/button_design"
            android:paddingLeft="10dp"
            android:textSize="20sp"/>

    <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:background="@drawable/button_design"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="16sp"/>


</LinearLayout>




