<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResetPassword">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reset_text"
            android:textSize="14dp" />

    <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edt_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:hint="@string/reset_email"
            android:inputType="textEmailAddress" />

    <Button
            android:layout_marginTop="20dp"

            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:background="@drawable/button_design"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass" />



</LinearLayout>